--- a/progress.org
+++ b/progress.org
@@ -11,6 +11,17 @@ To understnad time, or make sense of it we divide
 **** Spatial movement and energy is coordinated
 
 ** The myth of history
-History history, history... just repeats itself. If it has to be repeated, it means it hasn't been _overcome_. 
+History history, history... just repeats itself. If it has to be repeated, it means it hasn't been (*) _overcome_ . 
+
+History is only what has been recorded, and what has been synthesized from a certain point of view. So if the subset of history that is recorded, narrowed down further by taking a point of view. Point of view, or interpretation isn't something we can escape, however the problem is that history is _presented not as an interpretation_, this is problematic...
+
+History is appropriated and reappropriated by the cultural and politics of any given time.
+
+**** Notes
 ***** overcome:
-Perhaps not the word I want to use. essentially
+Perhaps not the word I want to use. essentially that it repeats itself means we have not moved past, we have not turned to direction, we are perhaps circulating, revolving.
+
+** Technological, medical and scientific progress
+
+
+** 
