--- a/temp.org
+++ b/temp.org
@@ -1,16 +1,61 @@
+* Assistance
+IPCO office - Richmond 10
+ISSO office - Richmond 6
+SAS Office - Richmond 6
+SU Office - Richmon 6
+
+* Resources
+Learning Zone - Annex Building - Level 1
+https://www.instagram.com/ocadulibrary
+
+WLC
+https://www.instagram.com/ocadu_writingandlearning/
+
+IT
+100 Mcaul, Level 3
+
+Dorothy hoover Annex Building - Level 1
+https://www.instagram.com/ocadulibrary
+
+* Galleries
+Ada Slaight and Ignite gallery (find online)
+
+* Faculty offices
+** faculty of design: https://www.instagram.com/ocadu_design/
+designoffice@ocadu.ca
+230 Richmond Street West, Room 910
+Advertising
+
+Environmental Design
+Graphic Design
+Illustration
+Industrial Design
+Material Art & Design
+
+** faculty of art: https://www.instagram.com/ocadu_art/
+artoffice@ocadu.ca
+230 Richmond Street West, Room 915 
+
+Drawing & Painting
+Experimental Animation
+Integrated Media
+Photography
+Printmaking & Publications
+Sculpture/Installation
+
+** faculty of arts and sciences: https://www.instagram.com/ocadu_fas/
+fas@ocadu.ca
+100 McCaul St., Room 315
+
+Creative Writing
+Digital Futures
+Indigenous Visual Culture
+Visual and Critical Studies
+Criticism & Curatorial Practice
+Liberal Studies
+
+
+* Other
 Campus Life office - ocadcampuslife@ocadu.ca
 Health and wellness centre
 
-Faculty offices
-
-IPCO office - Richmond 6
-ISSO office - Richmond 6
-SAS Office - Richmond 6
-SU Office - 
-
-Learning Zone
-WLC
-IT
-AV
-Dorothy hooveer
-Ada Slaight and Ignite gallery (find online)
