--- a/progress.org
+++ b/progress.org
@@ -22,6 +22,7 @@ History is appropriated and reappropriated by the cultural and politics of any g
 Perhaps not the word I want to use. essentially that it repeats itself means we have not moved past, we have not turned to direction, we are perhaps circulating, revolving.
 
 ** Technological, medical and scientific progress
+** Excerpt
+*** https://doubleblindmag.com/colonialism-by-another-name/
+'Throughout the period of colonialism, which, in different forms, continues to this day, and is more aptly described as on-going coloniality, the dominance of this single story spread across the globe and was violently foisted upon those deemed “non-modern” or less than fully human, according to the hierarchical standards set by the leaders of Western modernity. Within this modern/colonial imaginary, everyone that is not white and not ascribing to the same dominant beliefs, knowledge, and value systems of Christian Europeans and their colonial descendants is deemed as lacking full humanity. Education and mass media continue to perpetuate and legitimize the assimilation and annihilation of all non-modern modes of existence.'
 
-
-** 
