--- a/thoughts_ai.org
+++ b/thoughts_ai.org
@@ -9,3 +9,12 @@ Algorithms pervert one’s attention. An atmosphere that promotes being performa
 * Outwards Links 
 [[file:trevor_hito_talk.org][Refer to Trevor Pagelen and Hito Steyrel Talk notes]]
 
+* Alters norms and values (culture)
+culture as norm and value in a community. altering norm or value alters behaviour (no shit). altering norms and values should come from a meaningful source, not through statistical lockstep (following convergence of averages...).
+
+not necessarily related to AI but my understanding of norm and value come from here.
+https://www.youtube.com/watch?v=uW1G1WCcXsk
+
+Also her manifestor has a bit about engaging with difference, the talk above goes a little bit more over what she thinks of values and norms and how they form and how we can navigate them....
+https://showuptoronto.ca/manifesto
+
