--- a/todo.org
+++ b/todo.org
@@ -1,9 +1,42 @@
-* IPCO
-- [ ] Take pictures at OCAD 
+* Buying
+** DONE buy groceries
+*** dal?
+*** ginger
+*** tomato
+*** grapes
+*** apple/pears
+*** onion
 
+** DONE buy cells ? to measure
+** DONE buy shrooms
+** DONE buy hoagies
+** TODO buy paint (?)
+*** TODO paint door
+* Others 
+** TODO make registration doc ()
+*** TODO Scrape canvas stuff 
+*** TODO Organize the stuff
+*** TODO Design the pdf
+** TODO prepare meal and medicine
+** TODO prepare dose
+** DONE plan out trip 
+*** timing (ferry, consumption, return)
+|---------+-------+-------|
+| name    |   tl1 |   tl2 |
+|---------+-------+-------|
+| home    | 07:00 | 08:00 |
+| ferry   | 07:45 | 08:30 |
+| reach   | 08:15 | 09:00 |
+|---------+-------+-------|
+| consume | 08:45 | 09:30 |
+| check   | 09:15 | 10:00 |
+|---------+-------+-------|
+| peak    | 11:00 | 11:45 |
+| end?    | 01:00 | 01:45 |
+|---------+-------+-------|
+
+*** thoughts
+** DONE clean kitchen
+** DONE clean washroom
 * S-P-A website 
-- [ ] Add pages for projects 
-- [ ] Add footer
-
-* MISC
-- [ ] Logo for Anoushka
+** TODO Add footer
