added stuff to todo

--- a/todo.org
+++ b/todo.org
@@ -16,13 +16,20 @@ Like I did for lewis class, the speech website. Figure out a sequencing strategy
 - Organize and download typefaces (free and trials)
 
 * Things to do 
-- Make a film with/of veer and conversations
+- Work stuff with mom dad
 - Make a book for armaan
+- Buy Basoori
 
-- Finish Are.na garden/backyard (and publish)
-  ./arena_garden.org
-
-- Watch, read and listen to stuff and (log what you did)?
 - Make progress on thesis work (reflection + prototype)  
+
+- Finish Are.na garden/backyard (and publish) ./arena_garden.org
+- C stuff
+- SICP course
+
+- Watch films,
+- read books
+- listen to music
+
+- (Maybe) Make a film with/of veer and conversations
 - (Maybe) learn to stitch/make stuff with fabric
 
