--- a/arena_garden.org
+++ b/arena_garden.org
@@ -1,6 +1,6 @@
 * MVP
 - [X] given slug/slugs download channel to db
 - [X] with blocks
-- [ ] have user, attachment, image, source data
-- [ ] mount channel to fs
-- [ ] compare changes and push to are.na (only edit no delete)
+- [X] mount channel to fs
+- [X] compare changes and push to are.na (only edit no delete)
+- [X] have user, attachment, image, source data
